[project]
name = "robo-advisor-with-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "selenium>=4.31.0",
    "yfinance>=0.2.55",
    "ipywidgets>=8.1.2",
    "jupyter>=1.0.0",
    "pandas-datareader>=0.10.0",
    "statsmodels>=0.14.4",
    "arch>=7.2.0",
    "xlrd>=2.0.1",
    "openpyxl>=3.1.5",
    "tqdm>=4.67.1",
    "getfamafrenchfactors>=0.0.5",
]
